--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ dominate==2.6.0
 email-validator==1.1.3
 Flask==2.1.1
 Flask-Bootstrap==3.3.7.1
-Flask-Login==0.6.0
+Flask-Login==0.6.0con
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
 flatbuffers==2.0
@@ -27,7 +27,7 @@ importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
 joblib==1.1.0
-keras==2.7.0
+keras==2.8.0
 Keras-Preprocessing==1.1.2
 libclang==13.0.0
 Markdown==3.3.6
@@ -50,12 +50,7 @@ scipy==1.8.0
 six==1.16.0
 sklearn==0.0
 SQLAlchemy==1.4.32
-tensorboard==2.8.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow-cpu==2.7.0
-tensorflow-estimator==2.7.0
-tensorflow-io-gcs-filesystem==0.24.0
+tensorflow-cpu==2.8.0
 termcolor==1.1.0
 threadpoolctl==3.1.0
 typing_extensions==4.1.1
